--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,6 @@
   },
   "require": {
     "gabordemooij/redbean": "^v5.7.1",
-    "vlucas/valitron": "^1.4",
-    "phpmailer/phpmailer": "^6.5"
+    "vlucas/valitron": "^1.4"
   }
 }
