modified:   public/.htaccess  	modified:   public/adminlte/ckfinder/config.js 	modified:   public/adminlte/ckfinder/config.php

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,6 +1,8 @@
 RewriteEngine On
 RewriteCond %{REQUEST_FILENAME} !-f
 #RewriteCond %{REQUEST_FILENAME} !-d
+# no listing directories
 RewriteRule (.*) index.php?$1 [L,QSA]
 
 #Options -Indexes
+# no listing directories
